--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "typed.js",
   "version": "1.1.1",
-  "homepage": "https://github.com/mattboldt/typed.js",
+  "homepage": "https://github.com/seltzered/typed.js",
   "authors": [
     "Matt Boldt <me@mattboldt.com>"
   ],
